# centx

./: .env.example  .gitattributes  .gitignore  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/: README.md  README_EN.md
.github/workflows/: release-web.yml  release.yml  tauri-desktop.yml
cli/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts
cli/scripts/: smoke.sh
cli/skill/cent-cli/: SKILL.md
cli/src/: docs.ts
cli/src/commands/: add.ts  analyze.ts  book.ts  books.ts  budget.ts  category.ts  delete.ts  filter-view.ts  import.ts  install-skill.ts  logout.ts  search.ts  stash.ts  sync.ts  tag-group.ts  tag.ts  update.ts
cli/src/modal/: index.ts
cli/src/runtime/: book.ts  config.ts  context.ts  filter.ts  meta-collection.ts  meta.ts  output.ts
cli/src/shims/: globals.ts  locale.ts  storage.ts  (+1 more)
docs/cent-cli/: BUILD_PLAN.md  PLAN_BOOK_CREATE.md  README.md  memory.md
docs/release/: README.md  android-build.md  google-play.md  macos-signing.md  windows-signing.md
scripts/: pack-web-bundle.mjs
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: ANDROID.md  DEEP_LINK_SERVER.md  GIT.md  README_TAURI.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent_api/: commands.rs  mod.rs  server.rs  state.rs
src-tauri/src/web_ota/: manifest.rs  mod.rs  state.rs
src/agent-api/: bridge.ts  lifecycle.ts  prompt.ts  skill.ts
src/components/: navigation.tsx
src/hooks/: use-url-handler.tsx
src/layouts/: main-layout.tsx
src/store/: agent-api.ts  preference.ts
src/utils/: clipboard.ts  deep-link.ts  fetch-proxy.ts  platform.ts  relayr-middleware.ts  tauri-oauth-loopback.ts  word.ts
(+20 files in other folders)
