[package]
name = "dailycent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dailycent_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-cors-fetch = "5.0.0"
tauri-plugin-oauth = "2"
tauri-plugin-clipboard-manager = "2"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
minisign-verify = "0.2"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
semver = "1"
hex = "0.4"
futures-util = "0.3"
base64 = "0.22"
thiserror = "1"

[target.'cfg(not(any(target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "matched-path"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
subtle = "2"

